# whats-the-meaning

./: README.md  pyproject.toml
whats_the_meaning/: app.py  run.py
whats_the_meaning/error_check/: typecheck.py
